improved offsets and fixed text overflow issue for location

--- a/src/client/calendar/events/Event.scss
+++ b/src/client/calendar/events/Event.scss
@@ -38,7 +38,7 @@ $base-line-rem: $line-height-rem / 2;
 
 .EventName {
   @include text-2();
-  margin-bottom: 1rem;
+  //margin-bottom: 1rem;
   max-height: $line-height-rem * 3;
   letter-spacing: -0.3px;
 
@@ -70,24 +70,30 @@ $base-line-rem: $line-height-rem / 2;
   }
 
   &.size-S {
-    @include text-sm-11();
-    @include text-1();
+    @include text-sm-10($offset: 3);
     line-height: 1.5rem;
-    top: pxToRem(3);
     //top: pxToRem(-1);
     margin-bottom: 0;
-    max-height: 95%;
+    &.size-S-6 {
+      max-height: $base-line-rem * 4.5;
+    }
+    &.size-S-7 {
+      max-height: $base-line-rem * 6;
+    }
+    //max-height: $base-line-rem * 6;
     //max-height: calc(100% - 0.5rem);
   }
 
   &.size-M {
-    @include text-sm-11();
+    @include text-sm-11($offset: 3);
     line-height: 1.5rem;
-    top: pxToRem(3);
     font-weight: 700;
-    margin-bottom: 1rem;
-    max-height: $base-line-rem * 8;
+    margin-bottom: 0rem;
+    max-height: $base-line-rem * 6;
     letter-spacing: -0.1px;
+    &.size-M-9 {
+      max-height: $base-line-rem * 4.5;;
+    }
   }
 
   &.size-L {
@@ -100,9 +106,8 @@ $base-line-rem: $line-height-rem / 2;
   }
 
   &.size-XL {
-    @include text-3();
+    @include text-3($offset: 1);
     line-height: 2.5rem;
-    top: pxToRem(1);
     letter-spacing: 0px;
     margin-bottom: 0;
     font-weight: 700;
